# trajectory_tracking

./: CMakeLists.txt  README.md
launch/: circle.launch  stragthline.launch
script/: plotter.py
src/: circle.cpp  straghtline.cpp
video/: circle_moving.mkv
